force-app/main/default/objects/PMC_SS_Allocation__c/PMC_SS_Allocation__c.object-meta.xml
<CustomObject>
    <description>Custom object to store the quota allocation data from O9</description>
    <label>Allocation</label>
    <nameField>
        <displayFormat>AD-{000000}</displayFormat>
        <label>Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>