force-app/main/default/objects/PMC_SS_Allocation__c/fields/PMC_SS_AccountManagerName__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccountManagerName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the Account Manager to whom Allocation assigned</description>
    <label>Account Manager Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PMC_SS_QuotaAllocationData</relationshipName>
    <type>Lookup</type>
</CustomField>