force-app/main/default/objects/PMC_SS_Allocation__c/fields/PMC_SS_AllocatedActualQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AllocatedActualQuantity__c</fullName>
    <description>Specifies the Actual Allocated Quantity</description>
    <label>Allocated Actual Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>