force-app/main/default/objects/PMC_SS_Allocation__c/fields/PMC_SS_AllocationPeriod__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AllocationPeriod__c</fullName>
    <description>Specifies the Allocation Period</description>
    <label>Allocation Period</label>
    <type>Date</type>
</CustomField>