force-app/main/default/objects/PMC_SS_Allocation__c/fields/PMC_SS_AllocationSummary__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AllocationSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the Allocation Summary</description>
    <label>Allocation Summary</label>
    <referenceTo>PMC_SS_AllocationSummary__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>