force-app/main/default/objects/PMC_SS_Allocation__c/fields/PMC_SS_Product__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the Product</description>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.PMC_CPQ_SAPProductCode__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>PMC_SS_QuotaAllocationData</relationshipName>
    <type>Lookup</type>
</CustomField>