force-app/main/default/objects/PMC_SS_Allocation__c/fields/PMC_SS_RequestedQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_RequestedQuantity__c</fullName>
    <description>Specifies the Requested Quantity</description>
    <label>Requested Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>