force-app/main/default/objects/PMC_SS_Allocation__c/fields/PMC_SS_UnitofMeasure__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_UnitofMeasure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_SS_UnitOfMeasure</valueSetName>
    </valueSet>
</CustomField>